# DevSweep

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleaner.rs  lib.rs  main.rs  rules.rs  scanner.rs  tools.rs
src/lib/: ProjectCard.svelte  format.ts  types.ts
src/routes/: +page.svelte
